// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ValueList compact render should render array values separated by ", " 1`] = `
<div
  className="compact"
>
  <div
    className="item-value"
  >
    first_value
  </div>
  <div
    className="item-value"
  >
    second_value
  </div>
  <div
    className="item-value"
  >
    third value
  </div>
</div>
`;

exports[`ValueList compact render should render icons when the value has one 1`] = `
<div
  className="compact"
>
  <div
    className="item-value"
  >
    first_value
  </div>
  <div
    className="item-value"
  >
    <Connect(Icon)
      data={
        Object {
          "icon": "icon2",
        }
      }
    />
    second_value
  </div>
  <div
    className="item-value"
  >
    third value
  </div>
</div>
`;

exports[`ValueList compact render should render multidate in multiple lines 1`] = `
<div
  className="compact"
>
  <div
    className="item-value"
  >
    first_value
  </div>
  <div
    className="item-value"
  >
    second_value
  </div>
  <div
    className="item-value"
  >
    third value
  </div>
</div>
`;

exports[`ValueList compact render should render multidaterange in multiple lines 1`] = `
<div
  className="compact"
>
  <div
    className="item-value"
  >
    first_value
  </div>
  <div
    className="item-value"
  >
    second_value
  </div>
  <div
    className="item-value"
  >
    third value
  </div>
</div>
`;

exports[`ValueList should group items with same value 1`] = `
<ul
  className="multiline"
>
  <li
    key="label_0"
  >
    <div
      className="item-value"
    >
      first_value
    </div>
  </li>
  <li
    key="label_1"
  >
    <div
      className="item-value"
    >
      second_value
      <span
        className="item-count"
      >
        3
      </span>
    </div>
  </li>
  <li
    key="label_2"
  >
    <div
      className="item-value"
    >
      third value
      <span
        className="item-count"
      >
        2
      </span>
    </div>
  </li>
</ul>
`;

exports[`ValueList should render icons when the value has one 1`] = `
<ul
  className="multiline"
>
  <li
    key="label_0"
  >
    <div
      className="item-value"
    >
      <Connect(Icon)
        data={
          Object {
            "icon": "icon",
          }
        }
      />
      first_value
    </div>
  </li>
  <li
    key="label_1"
  >
    <div
      className="item-value"
    >
      <Connect(Icon)
        data={
          Object {
            "icon": "icon2",
          }
        }
      />
      second_value
    </div>
  </li>
  <li
    key="label_2"
  >
    <div
      className="item-value"
    >
      third value
    </div>
  </li>
</ul>
`;

exports[`ValueList should render the values as a ul list 1`] = `
<ul
  className="multiline"
>
  <li
    key="label_0"
  >
    <div
      className="item-value"
    >
      first_value
    </div>
  </li>
  <li
    key="label_1"
  >
    <div
      className="item-value"
    >
      second_value
    </div>
  </li>
  <li
    key="label_2"
  >
    <div
      className="item-value"
    >
      third value
    </div>
  </li>
</ul>
`;
